--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 
 .custom-Input {
-    @apply placeholder:italic placeholder:text-slate-400 block bg-white border border-slate-300 rounded-md py-4 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm
+    @apply placeholder:italic placeholder:text-slate-400 block bg-white border border-slate-300 rounded-md p-2 lg:p-3.5 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 w-[100%]
 }
