--- a/src/assest/style.scss
+++ b/src/assest/style.scss
@@ -23,9 +23,10 @@ body{
 .box_container{
   border-radius: 20px 20px 160px 20px;
   font-weight: bolder;
+  height: auto;
 }
 .result_text{
-  font-size: 5rem;
+  font-size: 3rem;
   font-family: ExtraBoldFont;
 }
 
