--- a/src/assest/style.scss
+++ b/src/assest/style.scss
@@ -88,6 +88,10 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.mt-60{
+  margin-top: 60px;
+}
+
 @keyframes btnActiveAnimation {
   0% {transform: translate(0px, -27px);}
   50% {transform: translate(0px, 27px);}
